unpackaged/main/default/objects/Profil_CegidPasseport__c/Profil_CegidPasseport__c.object-meta.xml
<CustomObject>
    <description>Cet objet recense les utilisateurs en provenance du Portail CegidPasseport.</description>
    <label>Profil CegidPasseport</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profils CegidPasseport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>