unpackaged/main/default/objects/Profil_CegidPasseport__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Profil CegidPasseport</relationshipLabel>
    <relationshipName>Profil_CegidPasseport</relationshipName>
    <type>Lookup</type>
</CustomField>