unpackaged/main/default/objects/Profil_CegidPasseport__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profil CegidPasseport</relationshipLabel>
    <relationshipName>Profil_CegidPasseport</relationshipName>
    <type>Lookup</type>
</CustomField>