unpackaged/main/default/objects/Profil_CegidPasseport__c/fields/ID_CegidPasseport__c.field-meta.xml
<CustomField>
    <fullName>ID_CegidPasseport__c</fullName>
    <externalId>true</externalId>
    <label>ID CegidPasseport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>