unpackaged/main/default/objects/Profil_CegidPasseport__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>